Sonar trivia + lagt til på TpsPersonService #deploy-test-dolly-backend